Fixed minor alignment issue in header

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -372,6 +372,11 @@ img {
 .p-name {
     font-weight: 600;
     color: $black;
+    line-height: 100%;
+}
+
+h1 {
+    margin-top: 3px !important;
 }
 
 
